fix: hide scrollbar but keep scrolling

--- a/app/design/frontend/Devmy/nextouch/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Devmy/nextouch/Magento_LayeredNavigation/web/css/source/_module.less
@@ -213,6 +213,15 @@
                     }
                 }
             }
+
+            .modal-content {
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+            }
         }
     }
 }
